# beachvar-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  main.py  pyproject.toml
.github/workflows/: build.yml
src/: backend.py  config.py  docker.py  registry.py  updater.py
